theme changes, snackbar positioning, corner radius

--- a/valuetransfer/src/main/res/drawable/square_rounded_dark_green.xml
+++ b/valuetransfer/src/main/res/drawable/square_rounded_dark_green.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/colorPrimaryDarkValueTransfer"/>
-    <corners android:radius="10dp" />
+    <corners android:radius="@dimen/cornerRadius" />
 </shape>
