--- a/valuetransfer/src/main/res/anim/slide_down.xml
+++ b/valuetransfer/src/main/res/anim/slide_down.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android" android:interpolator="@android:anim/linear_interpolator">
-    <scale
-        android:duration="200"
-        android:fromXScale="1.0"
-        android:fromYScale="0.0"
-        android:toXScale="1.0"
-        android:toYScale="1.0" />
+<set xmlns:android="http://schemas.android.com/apk/res/android">
+    <translate
+        android:duration="300"
+        android:fromYDelta="-100%"
+        android:toYDelta="0%"
+        android:interpolator="@android:interpolator/accelerate_cubic"/>
 </set>
