--- a/valuetransfer/src/main/res/drawable/dialog_rounded_bottom.xml
+++ b/valuetransfer/src/main/res/drawable/dialog_rounded_bottom.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp" />
+        android:bottomLeftRadius="@dimen/cornerRadius"
+        android:bottomRightRadius="@dimen/cornerRadius" />
 </shape>
