--- a/valuetransfer/src/main/res/drawable/dialog_rounded_top.xml
+++ b/valuetransfer/src/main/res/drawable/dialog_rounded_top.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp" />
+        android:topLeftRadius="@dimen/cornerRadius"
+        android:topRightRadius="@dimen/cornerRadius" />
 </shape>
