--- a/valuetransfer/src/main/res/drawable/pill_rounded_light_gray.xml
+++ b/valuetransfer/src/main/res/drawable/pill_rounded_light_gray.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/light_gray" />
-    <corners android:radius="10dp" />
+    <corners android:radius="@dimen/cornerRadius" />
 </shape>
