--- a/valuetransfer/src/main/res/layout/fragment_contacts_chat.xml
+++ b/valuetransfer/src/main/res/layout/fragment_contacts_chat.xml
@@ -16,7 +16,7 @@
         tools:visibility="visible"
         android:background="@drawable/dialog_rounded_bottom"
         android:backgroundTint="?attr/colorAccent"
-        tools:backgroundTint="@color/colorYellow"
+        tools:backgroundTint="@color/colorPrimaryValueTransfer"
         android:elevation="5dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -118,7 +118,7 @@
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_gravity="center"
-            android:background="@drawable/circle"
+            android:background="@drawable/pill_rounded"
             android:backgroundTint="?attr/colorAccent"
             tools:backgroundTint="@color/colorYellow"
             android:padding="6dp"
