--- a/valuetransfer/src/main/res/layout/item_contacts.xml
+++ b/valuetransfer/src/main/res/layout/item_contacts.xml
@@ -37,6 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="2dp"
             android:layout_marginTop="3dp"
+            android:paddingBottom="2dp"
             android:ellipsize="end"
             android:gravity="center"
             android:maxLines="2"
