--- a/valuetransfer/src/main/res/menu/contacts_options.xml
+++ b/valuetransfer/src/main/res/menu/contacts_options.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/actionSearch"
+        android:icon="@drawable/ic_search_filter"
+        android:title="Search"
+        app:showAsAction="always"/>
+    <item
         android:id="@+id/actionAddContact"
         android:icon="@drawable/ic_baseline_person_add_24"
         android:title="Add Contact"
