--- a/valuetransfer/src/main/res/values/styles.xml
+++ b/valuetransfer/src/main/res/values/styles.xml
@@ -46,7 +46,7 @@
     // Rounded Shape
     <style name="Rounded" parent="ShapeAppearance.MaterialComponents.SmallComponent">
         <item name="cornerFamily">rounded</item>
-        <item name="cornerSize">10dp</item>
+        <item name="cornerSize">@dimen/cornerRadius</item>
     </style>
 
     // Bottom Sheet Dialog
