--- a/valuetransfer/src/main/res/layout/fragment_settings.xml
+++ b/valuetransfer/src/main/res/layout/fragment_settings.xml
@@ -5,31 +5,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="12dp"
-    android:background="?attr/colorPrimary"
-    tools:background="@color/colorPrimaryValueTransfer">
+    android:background="?attr/colorPrimary">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:id="@+id/clThemeSelect"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_marginHorizontal="12dp"
         android:layout_marginTop="8dp"
         android:padding="12dp"
+        android:gravity="center_vertical"
         android:background="@drawable/pill_rounded"
         android:backgroundTint="?attr/colorPrimaryDark"
-        tools:backgroundTint="@color/colorPrimaryDarkValueTransfer"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Light Theme"
             android:textColor="?attr/colorOnPrimary"
-            tools:textColor="@color/white"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            android:textStyle="bold" />
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_weight="1" >
+        </Space>
 
         <Switch
             android:id="@+id/switchTheme"
@@ -40,18 +42,138 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
 
-        <TextView
+        <Space
             android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_weight="1" >
+        </Space>
+
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Dark Theme"
             android:textColor="?attr/colorOnPrimary"
-            tools:textColor="@color/white"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            android:textStyle="bold" />
+    </LinearLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:id="@+id/llNotifications"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="12dp"
+        android:layout_marginTop="8dp"
+        android:padding="12dp"
+        android:background="@drawable/pill_rounded"
+        android:backgroundTint="?attr/colorPrimaryDark"
+        app:layout_constraintTop_toBottomOf="@+id/clThemeSelect"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvNotificationsTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Notifications"
+                android:textColor="?attr/colorOnPrimary"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_weight="1" >
+            </Space>
+
+            <TextView
+                android:id="@+id/tvNotificationStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColorHint="@color/gray"
+                tools:hint="ON" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/llNotificationsSpecific"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="gone"
+            tools:visibility="visible">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Messages"
+                    android:textColor="?attr/colorOnPrimary" />
+
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:layout_weight="1" >
+                </Space>
+
+                <TextView
+                    android:id="@+id/tvNotificationMessagesStatus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColorHint="@color/gray"
+                    tools:hint="ON" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Transactions"
+                    android:textColor="?attr/colorOnPrimary" />
+
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:layout_weight="1" >
+                </Space>
+
+                <TextView
+                    android:id="@+id/tvNotificationTransactionsStatus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColorHint="@color/gray"
+                    tools:hint="ON" />
+
+            </LinearLayout>
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tv_openSystemNotificationsSettings"
+            android:background="@drawable/pill_rounded"
+            android:backgroundTint="@color/gray"
+            android:textColor="@color/white"
+            android:layout_marginTop="8dp"
+            android:paddingHorizontal="12dp"
+            android:paddingVertical="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="Open system settings to change" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tvAboutAppTitle"
@@ -62,10 +184,9 @@
         android:layout_marginEnd="8dp"
         android:text="About App"
         android:textColor="?attr/colorOnPrimary"
-        tools:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/clThemeSelect" />
+        app:layout_constraintTop_toBottomOf="@+id/llNotifications" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clGDPR"
@@ -76,7 +197,6 @@
         android:padding="12dp"
         android:background="@drawable/pill_rounded"
         android:backgroundTint="?attr/colorPrimaryDark"
-        tools:backgroundTint="@color/colorPrimaryDarkValueTransfer"
         app:layout_constraintTop_toBottomOf="@+id/tvAboutAppTitle">
 
         <TextView
@@ -84,7 +204,6 @@
             android:layout_height="wrap_content"
             android:text="GDPR"
             android:textColor="?attr/colorOnPrimary"
-            tools:textColor="@color/white"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -95,7 +214,6 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:padding="4dp"
-            tools:tint="@color/light_gray"
             app:tint="?attr/colorSecondary"
             android:src="@drawable/ic_baseline_arrow_forward_ios_24"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -103,4 +221,14 @@
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:textColor="?attr/colorOnPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Version x.x.x" />
 </androidx.constraintlayout.widget.ConstraintLayout>
