--- a/valuetransfer/src/main/res/layout/action_bar.xml
+++ b/valuetransfer/src/main/res/layout/action_bar.xml
@@ -1,35 +1,160 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
+    android:id="@+id/rlActionBar"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_actionbar_title"
-        style="@style/ActionBarTitleStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:layout_centerHorizontal="true"
-        android:ellipsize="end"
-        android:maxLines="1"
-        tools:text="Title"/>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_actionbar_subtitle"
-        style="@style/ActionBarSubTitleStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:layout_below="@+id/tv_actionbar_title"
-        android:ellipsize="end"
-        android:maxLines="1"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cvActionbarImage"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginVertical="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:cardElevation="0dp"
+        app:cardCornerRadius="@dimen/cornerRadius"
+        android:background="@drawable/pill_rounded"
+        android:backgroundTint="?attr/widgetColor"
         android:visibility="gone"
-        tools:visibility="visible"
-        tools:text="Subtitle" />
+        tools:visibility="visible">
 
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/ivContactImage"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:layout_gravity="center"
+            tools:src="@drawable/ic_contact"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"/>
+
+        <ImageView
+            android:id="@+id/ivContactIdenticon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:padding="8dp"
+            tools:src="@drawable/ic_contact"
+            android:adjustViewBounds="true"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            tools:visibility="visible" />
+    </androidx.cardview.widget.CardView>
+
+    <LinearLayout
+        android:id="@+id/llTitleSubtitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center_vertical">
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_actionbar_title"
+            style="@style/ActionBarTitleStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Title"
+            app:drawableTint="?attr/colorAccent"
+            android:drawablePadding="4dp" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_actionbar_subtitle"
+            style="@style/ActionBarSubTitleStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            tools:visibility="visible"
+            tools:text="Subtitle" />
+
+    </LinearLayout>
+</LinearLayout>
+
+
+<!--    <?xml version="1.0" encoding="utf-8"?>-->
+<!--<LinearLayout-->
+<!--android:id="@+id/rlActionBar"-->
+<!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--xmlns:tools="http://schemas.android.com/tools"-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_height="wrap_content"-->
+<!--android:orientation="vertical">-->
+
+<!--<androidx.appcompat.widget.AppCompatTextView-->
+<!--    android:id="@+id/tv_actionbar_title"-->
+<!--    style="@style/ActionBarTitleStyle"-->
+<!--    android:layout_width="wrap_content"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    tools:text="Title"-->
+<!--    />-->
+
+<!--<androidx.constraintlayout.widget.ConstraintLayout-->
+<!--    android:layout_width="wrap_content"-->
+<!--    android:layout_height="wrap_content">-->
+
+<!--    <LinearLayout-->
+<!--        android:id="@+id/rlVerificationStatus"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:paddingEnd="8dp"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toStartOf="@+id/llOnlineStatus">-->
+<!--        <ImageView-->
+<!--            android:id="@+id/ivVerified"-->
+<!--            android:layout_width="15dp"-->
+<!--            android:layout_height="15dp"-->
+<!--            android:layout_marginEnd="4dp"-->
+<!--            android:src="@drawable/ic_verified"-->
+<!--            app:tint="?attr/colorAccent"-->
+<!--            android:layout_gravity="center_vertical"/>-->
+
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Verified"/>-->
+
+<!--    </LinearLayout>-->
+
+<!--    <LinearLayout-->
+<!--        android:id="@+id/llOnlineStatus"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:layout_constraintStart_toEndOf="@+id/rlVerificationStatus"-->
+<!--        app:layout_constraintTop_toTopOf="parent">-->
+
+<!--        <androidx.appcompat.widget.AppCompatTextView-->
+<!--            android:id="@+id/tv_actionbar_subtitle"-->
+<!--            style="@style/ActionBarSubTitleStyle"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+
+<!--            android:visibility="gone"-->
+<!--            tools:visibility="visible"-->
+<!--            tools:text="Subtitle"/>-->
+
+<!--    </LinearLayout>-->
+
+<!--    &lt;!&ndash;        <FrameLayout&ndash;&gt;-->
+<!--    &lt;!&ndash;            android:id="@+id/flVerified"&ndash;&gt;-->
+<!--    &lt;!&ndash;            android:layout_width="wrap_content"&ndash;&gt;-->
+<!--    &lt;!&ndash;            android:layout_height="15dp"&ndash;&gt;-->
+<!--    &lt;!&ndash;            android:paddingEnd="12dp"&ndash;&gt;-->
+<!--    &lt;!&ndash;            android:layout_marginStart="8dp"&ndash;&gt;-->
+<!--    &lt;!&ndash;            app:layout_constraintTop_toTopOf="@+id/tv_actionbar_title"&ndash;&gt;-->
+<!--    &lt;!&ndash;            app:layout_constraintStart_toEndOf="@+id/tv_actionbar_title"&ndash;&gt;-->
+<!--    &lt;!&ndash;            app:layout_constraintEnd_toEndOf="parent"&ndash;&gt;-->
+<!--    &lt;!&ndash;            app:layout_constraintBottom_toBottomOf="@+id/tv_actionbar_title">&ndash;&gt;-->
+
+<!--    &lt;!&ndash;        &ndash;&gt;-->
+<!--    &lt;!&ndash;        </FrameLayout>&ndash;&gt;-->
+
+<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
+
+
+
+<!--</LinearLayout>-->
